2008-05-04  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iousbxx6_7.h: Conditionally define RAMPZ only if device is
	AT90USB1286 or AT90USB1287 (> 64K Flash).

2008-05-02  Dmitry Xmelkov  <dmix@gmail.ru>

	* tests/simulate/runtest.sh: Add ASM files to operate.
	* tests/simulate/avr/sfr-1.c: New file.
	* tests/simulate/avr/sfr-2.c: New file.
	* tests/simulate/avr/sfr-3.c: New file.
	* tests/simulate/avr/sfrasm-1.S: New file.
	* tests/simulate/avr/sfrasm-2.S: New file.
	* tests/simulate/avr/sfrasm-3.S: New file.

2008-05-01  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iox128a1.h: Conditionally compile flattened register names 
	for use in assembler only.
	* include/avr/iox64a1.h: Ditto.

2008-04-29  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/fuse.h: Fix bug with #ifndef lines.

2008-04-29  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iox128a1.h: New definitions to match the latest rev of the
	chip.
	* include/avr/iox64a1.h: Ditto.

2008-04-29  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/lock.h: Protect the LOCKMEM and LOCKBITS macros from being
	redefined. Change the documentation accordingly.
	* include/avr/fuse.h: Protect the FUSEMEM and FUSES macros from being
	redefined. Change the documentation accordingly.

2008-04-28  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/sfr_defs.h: Define __SFR_OFFSET value depending on 
	whether an XMEGA device is being used. Use __SFR_OFFSET in _SFR_IO8,
	_SFR_IO16, _SFR_IO_ADDR, _SFR_IO_REG_P macros.

2008-04-28  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #23004.
	* include/avr/wdt.h: Fix Doxygen comment.
	* NEWS: Add to fixed bug list.

2008-04-28  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iotn48.h: Fix and protect ADC definition, add ADCW 
	definition.
	* include/avr/iom1284p.h: Add ADCW definition. Protect ADC definition.
	* include/avr/iom328p.h: Ditto.